<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".HomeFragment">

    <TextView
        android:id="@+id/text_app_title"
        style="@style/AppText.Primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_call_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_app_title" 
        app:layout_constraintBottom_toBottomOf="@+id/text_app_title"/>

    <TextView
        android:id="@+id/text_explanation"
        style="@style/AppText.Secondary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/explanation"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_app_title" />

    <TextView
        android:id="@+id/text_schedule_guidance"
        style="@style/AppText.Secondary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/schedule_guidance"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_explanation" />

    <View
        android:id="@+id/status_indicator_dot"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/status_indicator_dot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_schedule_guidance" />

    <TextView
        android:id="@+id/text_service_status"
        style="@style/AppText.Primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/service_inactive"
        app:layout_constraintBottom_toBottomOf="@+id/status_indicator_dot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/status_indicator_dot"
        app:layout_constraintTop_toTopOf="@+id/status_indicator_dot" />

</androidx.constraintlayout.widget.ConstraintLayout>
